[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylunix"
version = "0.2.0-dev2"
description = "Add your description here"
authors = [
    { name="Magicsoldier19", email="magicsoldier19@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "pylunix-icon-kit>=1.0.0",
    "pyqt5",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/JIA-WEI-LI/pylunix"

[tool.setuptools]
packages = ["pylunix"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
